--- a/dev/static/css/main.css
+++ b/dev/static/css/main.css
@@ -540,6 +540,18 @@ body {
   }
 }
 
+@media print {
+  .page__wrapp {
+    width: 100%;
+  }
+  .page-asider {
+    display: none;
+  }
+  .weight__item.is-border {
+    padding-bottom: 0;
+  }
+}
+
 .page__vswrapp {
   width: 100%;
   max-width: 980px;
@@ -861,10 +873,32 @@ p {
   border-color: transparent transparent transparent #ccc;
 }
 
+.choose.is-print {
+  margin-top: 0;
+  width: 100%;
+  min-width: 600px;
+}
+
+.choose.is-print .week__to_cheet,
+.choose.is-print .week__from_cheet {
+  height: 35px;
+}
+
+.choose.is-print .week__item {
+  height: 35px;
+  line-height: 35px;
+  margin-top: 10px;
+}
+
+.choose.is-print .choose__title {
+  font-size: 22px;
+  margin-bottom: 12px;
+}
+
 .week {
   font-size: 18px;
   color: #333;
-  margin-bottom: 80px;
+  margin-bottom: 60px;
   text-align: center;
   font-family: 'lato-light', Arial, sans-serif;
 }
@@ -1031,7 +1065,7 @@ p {
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
   .week .mod_w20 {
     min-width: 44px;
   }
@@ -1039,6 +1073,7 @@ p {
 
 .week .mod_w30 {
   width: 30%;
+  min-width: 100px;
 }
 
 @media only screen and (max-width: 1080px) {
@@ -1047,7 +1082,7 @@ p {
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
   .week .mod_w30 {
     min-width: 50px;
   }
@@ -1055,9 +1090,10 @@ p {
 
 .week .mod_w40 {
   width: 40%;
+  min-width: 106px;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
   .week .mod_w40 {
     min-width: 58px;
   }
@@ -1067,7 +1103,7 @@ p {
   width: 50%;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
   .week .mod_w50 {
     min-width: 64px;
   }
@@ -1077,7 +1113,7 @@ p {
   width: 60%;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
   .week .mod_w60 {
     min-width: 72px;
   }
@@ -1110,7 +1146,7 @@ p {
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
   #livenirazim .mod_w20 {
     min-width: 44px;
   }
@@ -1160,7 +1196,7 @@ p {
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
   #topiramat .week__from_cheet {
     min-width: 78px;
   }
@@ -1168,7 +1204,7 @@ p {
 
 #topiramat .week__from_cheet.mod_w20 {
   width: 22%;
-  min-width: 1px;
+  min-width: 72px;
 }
 
 @media only screen and (max-width: 780px) {
@@ -1177,7 +1213,7 @@ p {
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
   #topiramat .week__from_cheet.mod_w20 {
     min-width: 46px;
   }
@@ -1185,6 +1221,7 @@ p {
 
 #topiramat .week__from_cheet.mod_w30 {
   width: 25%;
+  min-width: 85px;
 }
 
 @media only screen and (max-width: 780px) {
@@ -1199,7 +1236,7 @@ p {
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
   #topiramat .week__from_cheet.mod_w30 {
     min-width: 52px;
   }
@@ -1217,6 +1254,7 @@ p {
 
 #topiramat .week__from_cheet.mod_w50 {
   width: 30%;
+  min-width: 86px;
 }
 
 @media only screen and (max-width: 780px) {
@@ -1225,7 +1263,7 @@ p {
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
   #topiramat .week__from_cheet.mod_w50 {
     min-width: 58px;
   }
@@ -1243,6 +1281,7 @@ p {
 
 #topiramat .week__from_cheet.mod_w70 {
   width: 37%;
+  min-width: 88px;
 }
 
 @media only screen and (max-width: 780px) {
@@ -1251,7 +1290,7 @@ p {
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
   #topiramat .week__from_cheet.mod_w70 {
     min-width: 64px;
   }
@@ -1261,7 +1300,7 @@ p {
   width: 40%;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
   #topiramat .week__from_cheet.mod_w80 {
     min-width: 74px;
   }
@@ -1277,265 +1316,23 @@ p {
   }
 }
 
-@media print {
-  .choose {
-    margin-top: 60px;
-  }
-  .choose.is-active {
-    display: block;
-  }
-  .choose__title {
-    font-size: 26px;
-    color: #4e569a;
-    line-height: .8;
-    margin-bottom: 36px;
-    text-align: center;
-    font-family: 'lato-semibold-webfont', Arial, sans-serif;
-  }
-  .choose__title sup {
-    font-size: 50%;
-  }
-  .choose__title .choose__item {
-    display: none;
-  }
-  .choose__title .choose__item.is-active {
-    display: block;
-  }
-  .choose__preparat {
-    width: 100%;
-    display: block;
-    font-size: 0;
-    margin-bottom: 20px;
-    *zoom: 1;
-  }
-  .choose__preparat:after {
-    content: " ";
-    display: table;
-    clear: both;
-  }
-  .choose__preparat_from {
-    float: left;
-    font-size: 21px;
-    margin-right: 30px;
-    letter-spacing: -.032em;
-    color: #be006b;
-    font-family: 'lato-light', Arial, sans-serif;
-  }
-  .choose__preparat_to {
-    float: right;
-    font-size: 21px;
-    margin-left: 30px;
-    letter-spacing: -.032em;
-    color: #ae97c4;
-    font-family: 'lato-light', Arial, sans-serif;
-  }
-  .choose__preparat_arrow {
-    position: relative;
-    margin-top: 1px;
-    height: 1px;
-    -webkit-box-flex: 1;
-        -ms-flex: 1 1 auto;
-            flex: 1 1 auto;
-    background-color: #ccc;
-    clear: both;
-  }
-  .choose__preparat_arrow:after {
-    content: '';
-    position: absolute;
-    right: -4px;
-    top: 0;
-    -webkit-transform: translate(50%, -38%);
-            transform: translate(50%, -38%);
-    width: 0px;
-    height: 0px;
-    border-style: solid;
-    border-width: 3.5px 0 3.5px 11px;
-    border-color: transparent transparent transparent #ccc;
-  }
-  .week {
-    font-size: 18px;
-    color: #333;
-    margin-bottom: 80px;
-    text-align: center;
-    font-family: 'lato-light', Arial, sans-serif;
-    display: table;
-    table-layout: fixed;
-    width: 100%;
-  }
-  .week__item {
-    margin-top: 15px;
-    display: table-row;
-  }
-  .week__from {
-    display: table-column;
-    width: calc(50% - 30px);
-  }
-  .week__from_cheet {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding-right: 10px;
-    width: 66%;
-    height: 44px;
-    background-color: #be006b;
-    color: #fff;
-    font-size: 24px;
-    line-height: 44px;
-    font-family: 'lato-light', Arial, sans-serif;
-  }
-  .week__from_cheet.mod-transparent {
-    background-color: transparent;
-    color: #be006b;
-  }
-  .week__to {
-    display: table-column;
-    width: calc(50% - 30px);
-  }
-  .week__to_cheet {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding-left: 10px;
-    width: 100%;
-    height: 44px;
-    background-color: #ae97c4;
-    color: #fff;
-    font-size: 24px;
-    line-height: 44px;
-    font-family: 'lato-light', Arial, sans-serif;
-  }
-  .week__to_cheet.mod-transparent {
-    background-color: transparent;
-    color: #ae97c4;
-  }
-  .week__num {
-    display: table-column;
-    width: 40px;
-    height: 40px;
-    background-color: #e6e6e6;
-    color: #333;
-    font-size: 21px;
-    line-height: 40px;
-    text-align: center;
-    border-radius: 40px;
-    margin: 0 14px;
-    font-family: 'lato-regular-webfont', Arial, sans-serif;
-  }
-  .week__num.mod-transparent {
-    background-color: transparent;
-  }
-  .week sup {
-    top: -.2em;
-    font-size: 70%;
-  }
-  .week .mod_w20 {
-    width: 20%;
-    min-width: 96px;
-  }
-  .week .mod_w30 {
-    width: 30%;
-  }
-  .week .mod_w40 {
-    width: 40%;
-  }
-  .week .mod_w50 {
-    width: 50%;
-  }
-  .week .mod_w60 {
-    width: 60%;
-  }
-  .week .mod_w70 {
-    width: 70%;
-  }
-  .week .mod_w80 {
-    width: 80%;
-  }
-  .week .mod_w90 {
-    width: 90%;
-  }
-  #livenirazim .week__from_cheet {
-    width: 100%;
-  }
-  #livenirazim .mod_w20 {
-    width: 20%;
-    min-width: 96px;
-  }
-  #livenirazim .mod_w30 {
-    width: 30%;
-  }
-  #livenirazim .mod_w40 {
-    width: 40%;
-  }
-  #livenirazim .mod_w50 {
-    width: 50%;
-  }
-  #livenirazim .mod_w60 {
-    width: 60%;
-  }
-  #livenirazim .mod_w70 {
-    width: 70%;
-  }
-  #livenirazim .mod_w80 {
-    width: 80%;
-  }
-  #livenirazim .mod_w90 {
-    width: 90%;
-  }
-  #topiramat .week__from_cheet {
-    width: 44%;
-  }
-  #topiramat .week__from_cheet.mod_w20 {
-    width: 22%;
-    min-width: 1px;
-  }
-  #topiramat .week__from_cheet.mod_w30 {
-    width: 25%;
-  }
-  #topiramat .week__from_cheet.mod_w40 {
-    width: 26%;
-  }
-  #topiramat .week__from_cheet.mod_w50 {
-    width: 30%;
-  }
-  #topiramat .week__from_cheet.mod_w60 {
-    width: 34%;
-  }
-  #topiramat .week__from_cheet.mod_w70 {
-    width: 37%;
-  }
-  #topiramat .week__from_cheet.mod_w80 {
-    width: 40%;
-  }
-  #topiramat .week__from_cheet.mod_w90 {
-    width: 44%;
-  }
-}
-
-.footer {
-  margin-top: 20px;
+.shema_footer {
+  margin-top: 30px;
   display: none;
 }
 
 @media only screen and (max-width: 700px) {
-  .footer {
+  .shema_footer {
     margin-top: 30px;
   }
 }
 
-.footer.is-active {
+.shema_footer.is-active {
   display: block;
+}
+
+.shema_footer.is-print {
+  margin-top: 70px;
 }
 
 .simple__list {
@@ -1558,6 +1355,7 @@ p {
 
 .simple__item_icon {
   width: 39px;
+  min-width: 39px;
   height: 39px;
   display: inline-block;
   vertical-align: top;
@@ -1766,6 +1564,14 @@ p {
   color: #ccc;
 }
 
+.weight__print {
+  font-size: 1.3em;
+  display: inline-block;
+  margin: 0 16px;
+  color: #4e569a;
+  font-family: 'lato-bold-webfont', Arial, sans-serif;
+}
+
 .choise {
   width: 100%;
   max-width: 810px;
@@ -1880,5 +1686,3 @@ p {
     height: 10px;
   }
 }
-
-/*# sourceMappingURL=main.css.map */
