--- a/markup/components/choose/choose.html
+++ b/markup/components/choose/choose.html
@@ -222,9 +222,12 @@
 				</div>
 			</div>
 		</div>
-		<div class="is-center">
-			<button class="btn"> РАспеЧатать</button>
-			<!-- <button class="btn" onclick="printDiv('carbamazepinContent')" > РАспеЧатать</button> -->
+
+		<div class="html2pdf__page-break"></div>
+
+		<div class="is-center" data-hide="" >
+			<!-- <button class="btn"> РАспеЧатать</button> -->
+			<button class="btn" onclick="printDiv('test')" > РАспеЧатать</button>
 		</div>
 	</div>
 
@@ -461,8 +464,11 @@
 				</div>
 			</div>
 		</div>
-		<div class="is-center">
-			<button class="btn" > РАспеЧатать</button>
+
+		<!-- <div class="html2pdf__page-break"></div> -->
+
+		<div class="is-center"  data-hide="">
+			<button class="btn"  onclick="printDiv('test')" > РАспеЧатать</button>
 		</div>
 	</div>
 
@@ -699,9 +705,13 @@
 				</div>
 			</div>
 		</div>
-		<div class="is-center">
-			<button class="btn"> РАспеЧатать</button>
+
+		<!-- <div class="html2pdf__page-break"></div> -->
+
+		<div class="is-center"  data-hide="">
+			<button class="btn"  onclick="printDiv('test')" > РАспеЧатать</button>
 		</div>
+
 	</div>
 
 </div>
