--- a/markup/components/footer/footer.html
+++ b/markup/components/footer/footer.html
@@ -1,5 +1,5 @@
 
-<footer class="footer">
+<footer class="shema_footer">
 	<ul class="simple__list">
 		<li class="simple__item">
 			<img class="simple__item_icon" src="static/img/content/icon-list.png" alt="list-icon">
