--- a/markup/components/static/static.html
+++ b/markup/components/static/static.html
@@ -1,15 +1,15 @@
 
 <div class="static">
 	<h2 class="title__main">Схема переходной политерапии АЭП для взрослых пациентов с массой тела более 60 кг при переключении пациента с одной антиэпилептической терапии на другую. </h2>
-	<p class="desc__main">Данный инструмент позволит автоматически рассчитать среднюю рекомендованную дозировку вальпроевой кислоты и длительность перехода.<sup>2</sup> </p>
-	<p class="desc__main"> Если ранее принимавшийся противоэпилептический препарат отменяется, то его отмена должна проводиться постепенно.<sup>2</sup>
+	<p class="desc__main" data-hide="">Данный инструмент позволит автоматически рассчитать среднюю рекомендованную дозировку вальпроевой кислоты и длительность перехода.<sup>2</sup> </p>
+	<p class="desc__main" data-hide=""> Если ранее принимавшийся противоэпилептический препарат отменяется, то его отмена должна проводиться постепенно.<sup>2</sup>
 	</p>
 
 	<div class="weight">
 		<div class="weight__item is-border">
 			<div class="weight__wrap">
 				<div class="static__num">1</div>
-				<span class="desc__blue">Введите массу тела пациента (кг): </span>
+				<span class="desc__blue js-text"  data-startText="Введите массу тела пациента (кг): "   data-finishText="Масса тела пациента (кг): " >Введите массу тела пациента (кг): </span>
 			</div>
 			<div class="weight__enter">
 				<div class="weight__pic">
@@ -19,9 +19,9 @@
 			</div>
 		</div>
 
-		<div class="weight__item">
+		<div class="weight__item" >
 			<div class="static__num">2</div>
-			<span class="desc__blue">Выберите исходный препарат: </span>
+			<span class="desc__blue js-text"  data-startText="Выберите исходный препарат:"  data-finishText="Исходный препарат:"  >Выберите исходный препарат: </span>
 		</div>
 	</div>
 
@@ -42,3 +42,5 @@
 
 
 </div>
+
+<div class="html2pdf__page-break"></div>
