--- a/markup/components/static/static.sass
+++ b/markup/components/static/static.sass
@@ -80,6 +80,12 @@
 		+box
 		+placeholder
 			color: #ccc
+	&__print
+		font-size: 1.3em
+		display: inline-block
+		margin: 0 16px
+		color: $blue
+		+lb
 
 .choise
 	width: 100%
