--- a/markup/static/scss/common.sass
+++ b/markup/static/scss/common.sass
@@ -29,6 +29,14 @@ body
 	+r(1024)
 		width: 100%
 
+@media print
+	.page__wrapp
+		width: 100%
+	.page-asider
+		display: none
+	.weight__item.is-border
+		padding-bottom: 0
+
 .page__vswrapp
 	width: 100%
 	max-width: 980px
