--- a/markup/components/footer/footer.sass
+++ b/markup/components/footer/footer.sass
@@ -1,10 +1,12 @@
-.footer
-	margin-top: 20px
+.shema_footer
+	margin-top: 30px
 	display: none
 	+r(700)
 		margin-top: 30px
 	&.is-active
 		display: block
+	&.is-print
+		margin-top: 70px
 
 .simple__list
 	margin: 0 0 70px
@@ -16,6 +18,7 @@
 	display: flex
 	&_icon
 		width: 39px
+		min-width: 39px
 		height: 39px
 		display: inline-block
 		vertical-align: top
